--- a/src/app/shared/error-page/error-page.component.html
+++ b/src/app/shared/error-page/error-page.component.html
@@ -1,5 +1,15 @@
 <p>error-page works!</p>
 
-<a routerLink="/auth/login">
-  Ir a Login
-</a>
+<ul>
+  <li>
+    <a routerLink="/auth/login">
+      Ir a Login
+    </a>
+  </li>
+  <li>
+    <a routerLink="/auth/registro">
+      Ir a Registro
+    </a>
+
+  </li>
+</ul>
