--- a/src/app/heroes/pages/listado/listado.component.html
+++ b/src/app/heroes/pages/listado/listado.component.html
@@ -8,31 +8,8 @@
        fxFlex.lg="15"
        fxFlex.sm="30"
        *ngFor="let heroe of heroes">
-    <mat-card>
-      <mat-card-header>
-        <mat-card-title>{{ heroe.superhero }}</mat-card-title>
-        <mat-card-subtitle>{{ heroe.alter_ego }}</mat-card-subtitle>
-      </mat-card-header>
 
-      <img mat-card-image src="assets/heroes/{{heroe.id}}.jpg">
+    <app-heroe-tarjeta [heroe]="heroe"></app-heroe-tarjeta>
 
-      <mat-card-content>
-        <h3>{{ heroe.publisher }}</h3>
-        <p>
-          <strong>Su primera aparicion fue: </strong>{{ heroe.first_appearance }}
-          <br>
-          <strong>Personajes: </strong>{{ heroe.characters }}
-        </p>
-      </mat-card-content>
-
-      <mat-card-actions>
-        <button mat-raised-button color="warn">
-          Leer Mas...
-        </button>
-        <button mat-raised-button color="info">
-          Editar
-        </button>
-      </mat-card-actions>
-    </mat-card>
   </div>
 </div>
