--- a/src/app/heroes/pages/home/home.component.html
+++ b/src/app/heroes/pages/home/home.component.html
@@ -31,7 +31,9 @@
 
     <span class="spacer"></span>
 
-    <button mat-raised-button color="secondary">
+    <button mat-raised-button
+            color="secondary"
+            (click)="logout()">
       Cerrar Sesion
     </button>
   </mat-toolbar>
