--- a/src/app/heroes/pages/home/home.component.html
+++ b/src/app/heroes/pages/home/home.component.html
@@ -31,6 +31,8 @@
 
     <span class="spacer"></span>
 
+    <span>{{auth.usuario}}</span>
+
     <button mat-raised-button
             color="secondary"
             (click)="logout()">
